tests/phpt/parse_errors/fail_do_condition.php
@kphp_should_fail
/Failed to parse 'do' condition/
<?php

do {
} while (for);
